--- a/tela1.html
+++ b/tela1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt">
 <head>
     <title>REST Países e Regiões API</title>
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+<div id = "cabecalho">
+        <img src="https://www.incluirtecnologia.com.br/_nuxt/img/a86ae87.png" alt="Incluir Tecnologia">
+        <div align="right" id = "botao"><button type="button" id="voltar">Voltar</button></div>
+    </div>
     <h1>REST Países e Regiões API</h1>
     <div id="main">
         <div id="seleção">
